fix chrome scrollbar

--- a/styles/sass/_calculator.scss
+++ b/styles/sass/_calculator.scss
@@ -53,7 +53,9 @@ header .wrapper {
     
     
     p {
-        padding-top: 10px;
+        width: 100%;
+        padding: 20px 0 10px 0;
+        text-align: right;
         overflow: scroll;
     }
 }
@@ -79,4 +81,3 @@ header .wrapper {
 footer {
     display: none;
 }
-
